<resources>
    <string name="app_name">KaloriTakipUygulamasi</string>
    <string name="hosgeldiniz">Hoş geldiniz.</string>
    <string name="taniyalim">Sizleri tanıyalım.</string>
    <string name="adiniziGiriniz">Adınızı giriniz...</string>
    <string name="ad">Ad:</string>
    <string name="Yas">Yaş:</string>
    <string name="yasiniziGiriniz">Yaşınızı giriniz...</string>
    <string name="Cinsiyet">Cinsiyet:</string>
    <string name="erkek">Erkek</string>
    <string name="kadin">Kadın</string>
    <string name="CinsiyetGiriniz">Cinsiyet Giriniz...</string>
    <string name="kiloGiriniz">KG giriniz...</string>
    <string name="BoyGiriniz">CM giriniz...</string>
    <string name="kilo">Kilo:</string>
    <string name="Boy">Boy:</string>
    <string name="alinanCal">Alınan Kalori:</string>
    <string name="GerekenCal">Gereken Kalori:</string>
    <string-array name="Cinsiyetler">
        <item>Erkek</item>
        <item>Kadın</item>
    </string-array>
    <string name="anaMenu">Ana Menü</string>
    <string name="takvim">Takvim</string>
    <string name="kullanici">Kullanıcı</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="ogunler">Yedikleriniz</string>
    <string name="Kahvalti">Kahvaltı</string>
    <string name="ogleYemegi">Öğle Yemeği</string>
    <string name="araOgun">Ara Öğün</string>
    <string name="aksamYemegi">Akşam Yemeği</string>
    <string name="besinEkle">Besin Ekle</string>
    <string name="takvimGunSecin">Günlük Kalori Alımınızı Görmek İçin Gün Seçiniz.</string>
    <string name="secilenGun">Seçilen Gün:</string>
    <string name="tarihSec">Tarih Seç</string>
    <string name="secAlinmisCal">Seçtiğiniz Günde Alınmış Kalori:</string>
    <string name="txtIsim">İsim:</string>
    <string name="txtBoy">Boy:</string>
    <string name="txtKilo">Kilo:</string>
    <string name="txtYas">Yaş:</string>
    <string name="Degistir">Değiştir</string>
    <string name="adDegistir">İsim Değiştir</string>
    <string name="boyDegistir">Boy Değiştir</string>
    <string name="kiloDegistir">Kilo Değiştir</string>
    <string name="yasDegistir">Yaş Değiştir</string>
    <string name="isimGirin">İsim Girin</string>
    <string name="boyGirin">Boy Girin</string>
    <string name="kiloGirin">Kilo Girin</string>
    <string name="yasGirin">Yaş Girin</string>
    <string name="iptal">İptal</string>
    <string name="tamam">Tamam</string>
    <string name="textviewcinsiyet">Cinsiyet:</string>
    <string name="erkekstring">E</string>
    <string name="kadınstring">K</string>
    <string name="varcinsiyetstring">C</string>
    <string name="bosluk"></string>
    <string name="geristring">geri</string>
    <string name="arastring">Ara</string>
    <string name="besin_ara">Besin ara...</string>
    <string name="yemekekleme">Ekle</string>
</resources>