<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorPrimary"
    tools:context=".IlkKayitActivity">

    <TextView
        android:id="@+id/txtHosgeldiniz"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/hosgeldiniz"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTaniyalim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:text="@string/taniyalim"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHosgeldiniz" />

    <TextView
        android:id="@+id/txtAdiniziGir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/ad"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tfieldAdGir"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtYasiniziGir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/Yas"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tfieldYasGir"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCinsiyetSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/Cinsiyet"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtYasiniziGir"
        app:layout_constraintTop_toBottomOf="@+id/tfieldAdGir" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfieldAdGir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/adiniziGiriniz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtTaniyalim">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfieldYasGir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="240dp"
        android:hint="@string/yasiniziGiriniz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tfieldAdGir">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputYas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfieldCinsiyetGir"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:hint="@string/CinsiyetGiriniz"
        app:layout_constraintLeft_toRightOf="@id/tfieldYasGir"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCinsiyetSec">

        <AutoCompleteTextView
            android:id="@+id/AutoCompleteCinsiyet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>