<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BesineklemeActivity"
        android:background="?android:colorSecondary">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backbutton"
            android:layout_width="106dp"
            android:layout_height="53dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="289dp"
            android:text="@string/geristring"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            app:icon="@drawable/back"
            app:iconGravity="start"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aramabuton"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="16dp"
            android:text="@string/arastring"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            app:icon="@drawable/arama"
            app:iconGravity="start"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tfieldBesinAra"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eklemebuton"
        android:layout_width="104dp"
        android:layout_height="58dp"
        android:text="@string/yemekekleme"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:icon="@drawable/ekle"
        app:iconGravity="start"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yemeklistesi" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfieldBesinAra"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="95dp"
            android:hint="@string/besin_ara"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            app:boxBackgroundColor="@color/ilkKayitTextInput"
            app:layout_constraintEnd_toStartOf="@id/aramabuton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>


        <ListView
            android:id="@+id/yemeklistesi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="92dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tfieldBesinAra" />


    </androidx.constraintlayout.widget.ConstraintLayout>